--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@ body {
 
 .wrap {
     width: 66%;
-    background-color: rgb(235, 235, 235);
+    background-color: #6623771b;
     margin-bottom: 1rem;
     border-radius: 20px;
     padding: 1rem 0 1rem 0;
@@ -54,11 +54,12 @@ body {
 }
 
 .button {
-    padding: 1rem;
-    background-color: rgb(17, 0, 59);
+    padding: 0.5rem;
+    background-color: #662377;
     border-radius: 10px;
     color: aliceblue;
     text-decoration: none;
+    margin-top: 1rem;
 }
 
 .card-img {
@@ -83,4 +84,8 @@ body {
     justify-content: center;
     flex-direction: column;
     width: 50%;
+}
+
+.product-card h3 {
+    margin-bottom: 1rem;
 }
