--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,8 @@ body {
 
 .wrap {
     width: 66%;
-    background-color: #6623771b;
+    max-width: 900px;
+    background-color: #66237712;
     margin-bottom: 1rem;
     border-radius: 20px;
     padding: 1rem 0 1rem 0;
@@ -53,12 +54,14 @@ body {
     flex-direction: column;
 }
 
-.main-product p {
-    padding: 0 4rem 0 4rem;
+.product-title {
+    color: #662377;
+    margin: 0rem 0 1rem 0;
+    font-weight: 500;
 }
 
-.main-product h1, .main-product p {
-    text-align: center;
+.main-product p {
+    padding: 0 4rem 0 4rem;
     margin: 1rem 0 1rem 0;
 }
 
@@ -66,6 +69,7 @@ body {
     width: 30%;
     border-radius: 20px;
     box-shadow: 5px 5px 10px rgb(122, 122, 122);
+    margin-bottom: 1rem;
 }
 
 .button {
@@ -81,6 +85,7 @@ body {
     width: 70%;
     border-radius: 10px;
     box-shadow: 2px 2px 5px rgb(122, 122, 122);
+    margin-bottom: 1rem;
 }
 
 .fit-image {
@@ -101,6 +106,17 @@ body {
     width: 50%;
 }
 
-.product-card h3 {
-    margin-bottom: 1rem;
+.footer {
+    text-align: center;
+}
+
+.footer__logos svg {
+    width: 50px;
+    height: 50px;
+    margin: 0 1em;
+    transition: all 100ms ease-in;
+}
+
+.footer__logos svg:hover {
+    fill: purple;
 }
